# recommendation-engine

./: .gitignore  README.md  pyproject.toml
docs/: 01_problem_exploration.md  02_solution_proposal.md  03_tradeoffs_and_risks.md  04_simplification.md  EXPLANATION.md
src/humanoo/: __init__.py  churn_analysis.py  content_recommender.py  data_generator.py  logging_config.py  main.py  results.py
